--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-    "name": "kube-demo",
-    "version": "0.0.1",
-    "description": "A demo of a NW base k8s UI",
-    "main": "index.html",
-    "keywords": [
-        "proto",
-        "k8s",
-        "nw.js"
-    ],
-    "window": {
-        "toolbar": true,
-        "resizable": true,
-        "width": 1000,
-        "height": 600,
-        "min_width": 600,
-        "min_height": 400,
-        "max_width": 1000,
-        "max_height": 600,
-        "position": "center"
-    },
-    "author": "Sebastien Goasguen",
-    "license": "ASL v2",
-    "dependencies": {
-        "fs": "0.0.2",
-        "node-kubernetes-client": "~0.2.1"
-    }
+  "name": "kube-demo",
+  "version": "0.0.1",
+  "description": "A demo of a NW base k8s UI",
+  "main": "index.html",
+  "keywords": [
+    "proto",
+    "k8s",
+    "nw.js"
+  ],
+  "window": {
+    "toolbar": true,
+    "resizable": true,
+    "width": 1000,
+    "height": 600,
+    "min_width": 600,
+    "min_height": 400,
+    "max_width": 1000,
+    "max_height": 600,
+    "position": "center"
+  },
+  "author": "Sebastien Goasguen",
+  "license": "ASL v2",
+  "dependencies": {
+    "fs": "0.0.2",
+    "js-yaml": "^3.4.2",
+    "socket.io":"1.3.7",
+    "node-kubernetes-client": "~0.2.1"
+  }
 }
