--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "license": "ASL v2",
   "dependencies": {
     "fs": "0.0.2",
+    "github": "^0.2.4",
     "js-yaml": "^3.4.2",
-    "socket.io":"1.3.7",
-    "node-kubernetes-client": "~0.2.1"
+    "node-kubernetes-client": "~0.2.1",
+    "socket.io": "1.3.7"
   }
 }
