Work on context issues

--- a/config.sample
+++ b/config.sample
@@ -5,7 +5,7 @@ clusters:
   name: default
 - cluster:
     insecure-skip-tls-verify: true
-    server: https://45.55.47.37:6443
+    server: https://159.203.97.80:6443
   name: kmachine
 contexts:
 - context:
@@ -20,7 +20,7 @@ contexts:
     cluster: kmachine
     user: kuser
   name: kmachine
-current-context: ""
+current-context: kmachine
 kind: Config
 preferences: {}
 users:
