--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "nw.js"
   ],
   "window": {
-    "toolbar": true,
+    "toolbar": false,
     "resizable": true,
     "width": 1000,
-    "height": 600,
+    "height": 800,
     "min_width": 600,
     "min_height": 400,
     "max_width": 1000,
-    "max_height": 600,
+    "max_height": 800,
     "position": "center"
   },
   "author": "Sebastien Goasguen",
