--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs": "0.0.2",
     "github": "^0.2.4",
     "js-yaml": "^3.4.2",
+    "shelljs": "^0.6.0",
     "node-kubernetes-client": "~0.2.3",
     "os-homedir": "^1.0.1"
   },
